- BUG: Crash when showing the revision graph where the URL of the repository
       required escaping. (Stefan)
- BUG: The log dialog would show paths incorrectly greyed out or hidden
       for urls which need escaping. (Stefan)
- BUG: Sorting in the status list control didn't work properly for columns
       after 'lock author'. (Stefan)

Version 1.6.0
- NEW: Ignoring of multiple selected items by their extension. See
       issue #423 for details. (Stefan)
- NEW: The log dialog allows filtering by bug-ID.
       See issue #422 for details. (Stefan)
- NEW: Column to show the remote revision in the CfM dialog. (Stefan)
- NEW: The current revision of the working copy item is shown in
       bold in the log dialog. See issue #425 for details. (Stefan)
- NEW: The custom tsvn: urls allow a revision to be specified after the
       real url, separated with '?'. (Stefan)
- NEW: The state of the 'merge non-interactive' checkbox is remembered
       across sessions. (Stefan)
- NEW: editing the author in the log dialog is now possible for
       multiple selected revisions. (Stefan)
- NEW: Paste command to paste copied/cut files from explorer into
       a working copy. See issue #427 for details. (Stefan)
- NEW: TortoiseProc returns now 0 after the command finished successfully
       and -1 if the command failed with an error. See issue #426
       for details. (Stefan)
- NEW: Added blame command to context menu of the status list control. (Stefan)
- NEW: "up" button in the repo browser. (Stefan)
- NEW: Checkbox to exclude the externals in the Check-For-Modifications
       dialog. (Stefan)
- NEW: Ability to cancel the "patch all" function. (Stefan)
- NEW: Option to disable the context menu for specific paths. (Stefan)
- NEW: Extended the IBugTraqProvider. See issue #428 for details. (Stefan)
- NEW: The status cache handles "runas" now better. (Stefan)
- NEW: Automated removal of unused log caches. (Stefan Fuhrmann)