@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2008 - TortoiseSVN
+// Copyright (C) 2003-2009 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -739,15 +739,15 @@ bool ProjectProperties::AddAutoProps(const CTSVNPath& path)
 	char buf[1024] = {0};
 	SVNProperties props(path, SVNRev::REV_WC, false);
 	if (!sLabel.IsEmpty())
-		bRet = props.Add(BUGTRAQPROPNAME_LABEL, WideToMultibyte((LPCTSTR)sLabel)) && bRet;
+		bRet = props.Add(BUGTRAQPROPNAME_LABEL, WideToUTF8((LPCTSTR)sLabel)) && bRet;
 	if (!sMessage.IsEmpty())
-		bRet = props.Add(BUGTRAQPROPNAME_MESSAGE, WideToMultibyte((LPCTSTR)sMessage)) && bRet;
+		bRet = props.Add(BUGTRAQPROPNAME_MESSAGE, WideToUTF8((LPCTSTR)sMessage)) && bRet;
 	if (!bNumber)
 		bRet = props.Add(BUGTRAQPROPNAME_NUMBER, "false") && bRet;
 	if (!sCheckRe.IsEmpty())
-		bRet = props.Add(BUGTRAQPROPNAME_LOGREGEX, WideToMultibyte((LPCTSTR)(sCheckRe + _T("\n") + sBugIDRe))) && bRet;
+		bRet = props.Add(BUGTRAQPROPNAME_LOGREGEX, WideToUTF8((LPCTSTR)(sCheckRe + _T("\n") + sBugIDRe))) && bRet;
 	if (!sUrl.IsEmpty())
-		bRet = props.Add(BUGTRAQPROPNAME_URL, WideToMultibyte((LPCTSTR)sUrl)) && bRet;
+		bRet = props.Add(BUGTRAQPROPNAME_URL, WideToUTF8((LPCTSTR)sUrl)) && bRet;
 	if (bWarnIfNoIssue)
 		bRet = props.Add(BUGTRAQPROPNAME_WARNIFNOISSUE, "true") && bRet;
 	if (!bAppend)
@@ -758,7 +758,7 @@ bool ProjectProperties::AddAutoProps(const CTSVNPath& path)
 		bRet = props.Add(PROJECTPROPNAME_LOGWIDTHLINE, buf) && bRet;
 	}
 	if (!sLogTemplate.IsEmpty())
-		bRet = props.Add(PROJECTPROPNAME_LOGTEMPLATE, WideToMultibyte((LPCTSTR)sLogTemplate)) && bRet;
+		bRet = props.Add(PROJECTPROPNAME_LOGTEMPLATE, WideToUTF8((LPCTSTR)sLogTemplate)) && bRet;
 	if (nMinLogSize)
 	{
 		sprintf_s(buf, sizeof(buf), "%ld", nMinLogSize);
@@ -777,15 +777,15 @@ bool ProjectProperties::AddAutoProps(const CTSVNPath& path)
 		bRet = props.Add(PROJECTPROPNAME_PROJECTLANGUAGE, buf) && bRet;
 	}
 	if (!sFPPath.IsEmpty())
-		bRet = props.Add(PROJECTPROPNAME_USERFILEPROPERTY, WideToMultibyte((LPCTSTR)sFPPath)) && bRet;
+		bRet = props.Add(PROJECTPROPNAME_USERFILEPROPERTY, WideToUTF8((LPCTSTR)sFPPath)) && bRet;
 	if (!sDPPath.IsEmpty())
-		bRet = props.Add(PROJECTPROPNAME_USERDIRPROPERTY, WideToMultibyte((LPCTSTR)sDPPath)) && bRet;
+		bRet = props.Add(PROJECTPROPNAME_USERDIRPROPERTY, WideToUTF8((LPCTSTR)sDPPath)) && bRet;
 	if (!sWebViewerRev.IsEmpty())
-		bRet = props.Add(PROJECTPROPNAME_WEBVIEWER_REV, WideToMultibyte((LPCTSTR)sWebViewerRev)) && bRet;
+		bRet = props.Add(PROJECTPROPNAME_WEBVIEWER_REV, WideToUTF8((LPCTSTR)sWebViewerRev)) && bRet;
 	if (!sWebViewerPathRev.IsEmpty())
-		bRet = props.Add(PROJECTPROPNAME_WEBVIEWER_PATHREV, WideToMultibyte((LPCTSTR)sWebViewerPathRev)) && bRet;
+		bRet = props.Add(PROJECTPROPNAME_WEBVIEWER_PATHREV, WideToUTF8((LPCTSTR)sWebViewerPathRev)) && bRet;
 	if (!sAutoProps.IsEmpty())
-		bRet = props.Add(PROJECTPROPNAME_AUTOPROPS, WideToMultibyte((LPCTSTR)sAutoProps)) && bRet;
+		bRet = props.Add(PROJECTPROPNAME_AUTOPROPS, WideToUTF8((LPCTSTR)sAutoProps)) && bRet;
 	return bRet;
 }
 
